# lzt-mcp

./: .env.example  .gitignore  README.en.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/for_ai/: index.en.md  index.md
scripts/: run.sh
src/lzt_dev_mcp/: __init__.py  __main__.py  config.py  errors.py  logging_setup.py  server.py
src/lzt_dev_mcp/catalog/: __init__.py  errors_catalog.py  models.py  registry.py
src/lzt_dev_mcp/eventus/: __init__.py  dtos.py  http_client.py  tools.py
src/lzt_dev_mcp/flow/: __init__.py  dtos.py  http_client.py  tools.py
src/lzt_dev_mcp/helpers/: __init__.py  tools.py
src/lzt_dev_mcp/testing/: __init__.py  client_factory.py  tools.py
tests/: conftest.py  test_catalog_registry.py  test_eventus_dtos.py  test_eventus_tools.py  test_flow_dtos.py  test_flow_tools.py  test_helpers.py  test_prod_guard.py  test_send_request_live_testnet.py
