[project]
name = "lzt-dev-mcp"
version = "0.1.0"
description = "Development MCP server for the open-lzt ecosystem: lzt.market request testing, lzt-flow management, and API introspection helpers."
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "pylzt",
]

[project.optional-dependencies]
dev = [
    "lzt-testnet",
    "uvicorn>=0.32",
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.uv.sources]
# Local path dependency during dev — sibling repo on this machine.
pylzt = { git = "https://github.com/open-lzt/pylzt.git", branch = "main" }
lzt-testnet = { path = "../testnet", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lzt_dev_mcp"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC", "PL"]
ignore = ["PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "PLC0415"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "e2e: hits a running lzt-testnet/lzt-flow dev instance; skipped by default",
]
addopts = "-m 'not e2e'"
filterwarnings = ["ignore::pytest.PytestCollectionWarning"]
